Bug 152035 - HTML Form isn't sent by enter key when a radio button or checkbox is focused
Summary: HTML Form isn't sent by enter key when a radio button or checkbox is focused
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml forms (other bugs)
Version First Reported In: 3.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-09 02:30 UTC by Frank Steinmetzger
Modified: 2009-03-21 16:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2007-11-09 02:30:56 UTC
Version:            (using KDE KDE 3.5.7)
Installed from:    Gentoo Packages
OS:                Linux

I think it would improve forms' usability, if one could submit a form by hitting [Enter] in any of its input controls (except text areas of course).

I've come quite used to it in Firefox, for instance when I need to enter my user data upon eBay login. There, I enter my password, hit [Tab] twice to focus the "Stay logged in for a day" checkbox, press [Space] to check it and then [Enter] to submit the form. However, in Konqueror, I have to focus the submit button first using [Shift]+[Tab] and _then_ I can press [Enter]. This is waaaay too complicated. :o)
Comment 1 Maksim Orlovich 2007-11-09 04:05:40 UTC
Let's see... Hmm, you're right. It's certainly intended that enter work to submit a form... but it seems only lineedits and file upload things do it. Odd.
Comment 2 Kevin Funk 2008-04-20 15:01:57 UTC
Still in KDE 4.0.3 and 3.5.9. Just tested in this form here.
Comment 3 Stas Verberkt 2009-02-15 23:03:21 UTC
SVN commit 926642 by sverberkt:

Submit a form when return is hit on a checkbox or radio button
BUG:152035


 M  +9 -0      html_formimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=926642
Comment 4 Maksim Orlovich 2009-03-21 16:18:24 UTC
SVN commit 942331 by orlovich:

Merged revision:r926642 | sverberkt | 2009-02-15 17:03:20 -0500 (Sun, 15 Feb 2009) | 3 lines

Submit a form when return is hit on a checkbox or radio button
BUG:152035

 M  +9 -0      html_formimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=942331