Merged revision:r926642 | sverberkt | 2009-02-15 17:03:20 -0500 (Sun, 15 Feb 2009) | 3 lines

Submit a form when return is hit on a checkbox or radio button
BUG:152035

svn path=/branches/KDE/4.2/kdelibs/; revision=942331